Trying different ways to implement some idea of access-modifier determination.